stateDiagram-v2
    direction TB

    state "main/\nApp startup and task launch" as Main {
        MainC: main.c\nCreates mutexes, configures hardware, starts tasks
    }

    state "main/config/\nHardcoded defaults and runtime settings" as Config {
        ConfigH: config.h\nCompile-time IDs, pins, timeouts, MQTT defaults
        RuntimeH: runtime_config.h\nPublic getter/setter API
        RuntimeC: runtime_config.c\nLoads, validates, saves NVS values
    }

    state "main/shared/\nCommon state used across tasks" as Shared {
        AppStateH: app_state.h\nShared structs, globals, and task prototypes
        AppStateC: app_state.c\nMotor/sensor tables and helper functions
    }

    state "main/tasks/\nFreeRTOS task modules and hardware setup" as Tasks {
        CommandTask: command_task.c\nStrict serial command parser
        SensorTask: sensor_task.c\nPolls S0/S1 and prints sensor events
        EncoderTask: encoder_task.c\nConfigures PCNT quadrature counting
        MotorTask: motor_task.c\nConfigures PWM and direction GPIO
        MotorPidTask: motor_pid_task.c\nReads encoder speed and drives motor output
        MqttTask: mqtt_task.c/h\nHandles MQTT commands, feedback, tray status
    }

    state "main/conveyor/\nHigh-level tray transfer logic" as Conveyor {
        ConveyorH: conveyor_job.h\nCommand, state, and status types
        ConveyorC: conveyor_job.c\nTX/RX/ERROR/ESTOP state machine
    }

    state "components/microrl/\nVendored serial line parser" as Microrl {
        MicrorlH: microrl.h\nParser API
        MicrorlC: microrl.c\nLine editing and command dispatch
    }

    state "ESP-IDF\nPlatform drivers and services" as EspIdf {
        GpioLedc: GPIO/LEDC\nSensor pins and motor PWM
        Pcnt: PCNT\nEncoder counting
        WifiMqtt: WiFi/MQTT\nNetwork control channel
        Nvs: NVS\nSaved runtime config
    }

    [*] --> Main
    Main --> Config
    Main --> Shared
    Main --> Tasks
    Main --> Conveyor
    Tasks --> Microrl
    Tasks --> EspIdf
    Conveyor --> Shared
